Navbar changes, photos added, initial content

--- a/about.html
+++ b/about.html
@@ -12,17 +12,23 @@
   </head>
   <body>
     <div class="container">
-      <nav>
-        <div class="nav1">
-          <a href="index.html">Felix Doll</a>
-        </div>
-        <div class="nav2">
-          <a href="http://photography.felixdoll.net">Photography</a>
-          <a href="portfolio.html">Portfolio</a>
-          <div class="active">
-            <a href="about.html">About</a>
+      <div class="aboutpic">
+        <nav>
+          <div class="nav1">
+            <a href="index.html">Felix Doll</a>
           </div>
+          <div class="nav2">
+            <a href="http://photography.felixdoll.net">Photography</a>
+            <a href="portfolio.html">Portfolio</a>
+            <div class="active">
+              <a href="about.html">About</a>
+            </div>
+          </div>
+        </nav>
+        <div class="pagetitle">
+          <h1>About</h1>
         </div>
-      </nav>
+      </div>
+      <p>I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.
     </div>
-</html
+</html>
