--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <div class="title">
           <h1>Felix Doll</h1>
           <div class="details">
-            <p>Photographer, studying Graphic Design and Computer Science</p>
+            <p>Photographer, majoring in Graphic Design and Computer Science</p>
         </div>
       </div>
     </div>
-</html
+  </div>
+</html>
