photo adjustments, nav fixes, updates

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <a href="index.html">Felix Doll</a>
           </div>
           <div class="nav2">
-            <a href="http://photography.felixdoll.net">Photography</a>
+            <a href="https://photography.felixdoll.net">Photography</a>
             <a href="portfolio.html">Portfolio</a>
             <div class="active">
               <a href="about.html">About</a>
@@ -29,6 +29,9 @@
           <h1>About</h1>
         </div>
       </div>
-      <p>I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.
+      <div class="aboutbox">
+        <p>I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.
+      </div>
     </div>
+  </body>
 </html>
