--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/sitewide.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
   </head>
+
   <body>
+
     <div class="container">
       <div class="portfoliopic">
         <nav>
@@ -18,7 +20,7 @@
             <a href="index.html">Felix Doll</a>
           </div>
           <div class="nav2">
-            <a href="http://photography.felixdoll.net">Photography</a>
+            <a href="https://photography.felixdoll.net">Photography</a>
             <div class="active">
               <a href="portfolio.html">Portfolio</a>
             </div>
@@ -29,25 +31,51 @@
           <h1>Portfolio</h1>
         </div>
       </div>
-    <p>Beijing poster, monogram, story, conference, label, font poster, this website, photography link</p>
-    <a href="https://felixnw.github.io/story/">
-      <img class="story" src="portfolio/story.png" alt="">
-    </a>
-    <a href="https://felixnw.github.io/conference/">
-      <img class="conference" src="portfolio/conference.png" alt="">
-    </a>
-    <p>This website</p>
-    <a href=portfolio/fontposter.png>
-      <img class="fontposter" src="portfolio/fontposter.png" alt="">
-    </a>
-    <a href=portfolio/beijingposter.png>
-      <img class="beijingposter" src="portfolio/beijingposter.png" alt="">
-    </a>
-    <a href=portfolio/label.png>
-      <img class="label" src="portfolio/label.png" alt="">
-    </a>
-    <a href=portfolio/monogram.png>
-      <img class="monogram" src="portfolio/monogram.png" alt="">
-    </a>
+
+      <p>Beijing poster, monogram, story, conference, label, font poster, this website, photography link</p>
+      <h2>Web</h2>
+
+      <div>
+        <a href="https://felixnw.github.io/story/">
+          <img class="story" src="portfolio/story.png" alt="">
+        </a>
+      </div>
+
+      <div>
+        <a href="https://felixnw.github.io/conference/">
+          <img class="conference" src="portfolio/conference.png" alt="">
+        </a>
+      </div>
+
+      <div>
+        <p>This website</p>
+      </div>
+
+      <div>
+        <a href=portfolio/fontposter.png>
+          <img class="fontposter" src="portfolio/fontposter.png" alt="">
+        </a>
+      </div>
+
+      <h2>Print</h2>
+
+      <div>
+        <a href=portfolio/beijingposter.png>
+          <img class="beijingposter" src="portfolio/beijingposter.png" alt="">
+        </a>
+      </div>
+
+      <div>
+        <a href=portfolio/label.png>
+          <img class="label" src="portfolio/label.png" alt="">
+        </a>
+      </div>
+
+      <div>
+        <a href=portfolio/monogram.png>
+          <img class="monogram" src="portfolio/monogram.png" alt="">
+        </a>
+      </div>
     </div>
+  </body>
 </html>
