--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Felix Doll</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="">
+    <meta name="description" content="Felix Doll is a photographer, who is studying Graphic Design and Computer Science, in DC and Seattle.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
@@ -18,7 +18,7 @@
             <a href="index.html">Felix Doll</a>
           </div>
           <div class="nav2">
-            <a href="http://photography.felixdoll.net">Photography</a>
+            <a href="https://photography.felixdoll.net">Photography</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="about.html">About</a>
           </div>
