Images and updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Felix Doll: Portfolio</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="">
+    <meta name="description" content="Felix Doll's graphic design and web design portfolio">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
@@ -32,32 +32,35 @@
         </div>
       </div>
 
-      <p>Beijing poster, monogram, story, conference, label, font poster, this website, photography link</p>
+      <p>photography link</p>
       <h2>Web</h2>
+      <div class="web">
 
-      <div>
-        <a href="https://felixnw.github.io/story/">
-          <img class="story" src="portfolio/story.png" alt="">
-        </a>
-      </div>
+        <div>
+          <a href="https://felixnw.github.io/story/">
+            <img class="story" src="portfolio/story.png" alt="">
+          </a>
+        </div>
 
-      <div>
-        <a href="https://felixnw.github.io/conference/">
-          <img class="conference" src="portfolio/conference.png" alt="">
-        </a>
-      </div>
+        <div>
+          <a href="https://felixnw.github.io/conference/">
+            <img class="conference" src="portfolio/conference.png" alt="">
+          </a>
+        </div>
 
-      <div>
-        <p>This website</p>
-      </div>
+        <div>
+          <p>This website</p>
+        </div>
 
-      <div>
-        <a href=portfolio/fontposter.png>
-          <img class="fontposter" src="portfolio/fontposter.png" alt="">
-        </a>
       </div>
 
       <h2>Print</h2>
+
+      <div>
+          <a href=portfolio/fontposter.png>
+            <img class="fontposter" src="portfolio/fontposter.png" alt="">
+          </a>
+        </div>
 
       <div>
         <a href=portfolio/beijingposter.png>
