--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Felix Doll: About</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="">
+    <meta name="description" content="About Felix Doll">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
@@ -30,7 +30,11 @@
         </div>
       </div>
       <div class="aboutbox">
-        <p>I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.
+        <p>I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.</p>
+        <p>
+          <a href="https://github.com/felixnw/">GitHub</a>
+          <a href="https://www.linkedin.com/in/felixdoll">LinkedIn</a>
+        </p>
       </div>
     </div>
   </body>
