--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
       </div>
 
       <p>photography link</p>
-      <h2>Web</h2>
+      <h2 class="header">Web</h2>
       <div class="web">
 
         <div>
@@ -49,36 +49,41 @@
         </div>
 
         <div>
-          <p>This website</p>
-        </div>
-
-      </div>
-
-      <h2>Print</h2>
-
-      <div>
-          <a href=portfolio/fontposter.png>
-            <img class="fontposter" src="portfolio/fontposter.png" alt="">
+          <a href="https://felixnw.github.io/domain/">
+            <img class="domain" src="portfolio/domain.png" alt="">
           </a>
         </div>
 
-      <div>
-        <a href=portfolio/beijingposter.png>
-          <img class="beijingposter" src="portfolio/beijingposter.png" alt="">
-        </a>
       </div>
 
-      <div>
-        <a href=portfolio/label.png>
-          <img class="label" src="portfolio/label.png" alt="">
-        </a>
-      </div>
+      <h2 class="header">Print</h2>
+      <div class="print">
 
-      <div>
-        <a href=portfolio/monogram.png>
-          <img class="monogram" src="portfolio/monogram.png" alt="">
-        </a>
-      </div>
+        <div>
+            <a href=portfolio/fontposter.png>
+              <img class="fontposter" src="portfolio/fontposter.png" alt="">
+            </a>
+          </div>
+
+        <div>
+          <a href=portfolio/beijingposter.png>
+            <img class="beijingposter" src="portfolio/beijingposter.png" alt="">
+          </a>
+        </div>
+
+        <div>
+          <a href=portfolio/label.png>
+            <img class="label" src="portfolio/label.png" alt="">
+          </a>
+        </div>
+
+        <div>
+          <a href=portfolio/monogram.png>
+            <img class="monogram" src="portfolio/monogram.png" alt="">
+          </a>
+        </div>
+
+    </div>
     </div>
   </body>
 </html>
