About page redesign, portfolio populated

--- a/about.html
+++ b/about.html
@@ -30,11 +30,18 @@
         </div>
       </div>
       <div class="aboutbox">
-        <p>I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.</p>
-        <p>
-          <a href="https://github.com/felixnw/">GitHub</a>
-          <a href="https://www.linkedin.com/in/felixdoll">LinkedIn</a>
-        </p>
+        <div class="col1">
+          <img class="profile" src="img/profile.jpg" alt="">
+        </div>
+        <div class="col2">
+          <p>I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests.</p>
+        </div>
+        <div class="col3">
+          <p>
+            <a href="https://github.com/felixnw/"><img src="img/github.png" alt="GitHub Logo"></a>
+            <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="LinkedIn Logo"></a>
+          </p>
+        </div>
       </div>
     </div>
   </body>
