--- a/portfolio.html
+++ b/portfolio.html
@@ -32,27 +32,36 @@
         </div>
       </div>
 
-      <p>photography link</p>
       <h2 class="header">Web</h2>
       <div class="web">
 
         <div>
           <a href="https://felixnw.github.io/story/">
-            <img class="story" src="portfolio/story.png" alt="">
+            <img class="story" src="portfolio/story.png" alt="A screenshot of a website titled Bone Wars.">
           </a>
+          <p>The requirements for this project were to find an article on Wikipedia and make a website using the contents of the article.</p>
         </div>
 
         <div>
           <a href="https://felixnw.github.io/conference/">
-            <img class="conference" src="portfolio/conference.png" alt="">
+            <img class="conference" src="portfolio/conference.png" alt="A screenshot of a website titled Priv DC, which is an imaginary conference about privacy.">
           </a>
+          <p>The assignment was to come up with an imaginary conference and make a responsive website describing the event to those who could potentially attend.</p>
         </div>
 
         <div>
-          <a href="https://felixnw.github.io/domain/">
-            <img class="domain" src="portfolio/domain.png" alt="">
+          <a href="https://www.felixdoll.net">
+            <img class="domain" src="portfolio/domain.png" alt="A screenshot of the home page of this website.">
           </a>
+          <p>This website, my personal portfolio website.</p>
         </div>
+
+        <div>
+          <a href="https://photography.felixdoll.net">
+            <img class="photography" src="portfolio/photography.png" alt="A screenshot of my photography page.">
+          </a>
+          <p>All the photography on my photography page is mine. The tumblr theme is not mine, however.</p>
+          </div>
 
       </div>
 
@@ -60,30 +69,34 @@
       <div class="print">
 
         <div>
-            <a href=portfolio/fontposter.png>
-              <img class="fontposter" src="portfolio/fontposter.png" alt="">
-            </a>
+          <a href=portfolio/fontposter.png>
+            <img class="fontposter" src="portfolio/fontposter.png" alt="A poster about the font Avenir. The letter a from in the font is featured several times in different colors and orientations. A photo of the designer and some history is also included.">
+          </a>
+          <p>A poster that was supposed to showcase a font, with several samples of a letter, using text and images from the web.</p>
           </div>
 
         <div>
-          <a href=portfolio/beijingposter.png>
-            <img class="beijingposter" src="portfolio/beijingposter.png" alt="">
-          </a>
-        </div>
-
-        <div>
           <a href=portfolio/label.png>
-            <img class="label" src="portfolio/label.png" alt="">
+            <img class="label" src="portfolio/label.png" alt="The front and back of a label for Piccirilli's pesto pasta sauce. It is green with standard food label elements.">
           </a>
+          <p></p>
         </div>
 
         <div>
           <a href=portfolio/monogram.png>
-            <img class="monogram" src="portfolio/monogram.png" alt="">
+            <img class="monogram" src="portfolio/monogram.png" alt="The letters F and D with pieces removed on a black background.">
           </a>
+          <p>The point of this project was to make a simple monogram for oneself. </p>
         </div>
 
-    </div>
+        <div>
+          <a href=portfolio/beijingposter.png>
+            <img class="beijingposter" src="portfolio/beijingposter.png" alt="A poster showing the shape of China in red, with blue icicles hanging off it. The Olympics logo and 2022 are on it.">
+          </a>
+          <p>We had to make a poster for an upcoming olympics game, using only two colors and relatively simple shapes.</p>
+        </div>
+
+      </div>
     </div>
   </body>
 </html>
