--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
           <a href=portfolio/label.png>
             <img class="label" src="portfolio/label.png" alt="The front and back of a label for Piccirilli's pesto pasta sauce. It is green with standard food label elements.">
           </a>
-          <p></p>
+          <p>The assignment was to create a label for a jar of pasta sauce.</p>
         </div>
 
         <div>
@@ -93,7 +93,7 @@
           <a href=portfolio/beijingposter.png>
             <img class="beijingposter" src="portfolio/beijingposter.png" alt="A poster showing the shape of China in red, with blue icicles hanging off it. The Olympics logo and 2022 are on it.">
           </a>
-          <p>We had to make a poster for an upcoming olympics game, using only two colors and relatively simple shapes.</p>
+          <p>We had to make a poster for an upcoming Olympics game, using only two colors and relatively simple shapes.</p>
         </div>
 
       </div>
