--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
           <a href=portfolio/label.png>
             <img class="label" src="portfolio/label.png" alt="The front and back of a label for Piccirilli's pesto pasta sauce. It is green with standard food label elements.">
           </a>
-          <p>The assignment was to create a label for a jar of pasta sauce.</p>
+          <p>The assignment was to create a label for a jar of pasta sauce. The basil leaf is a stock image.</p>
         </div>
 
         <div>
