--- a/portfolio.html
+++ b/portfolio.html
@@ -46,14 +46,14 @@
 
         <div>
           <a href="https://felixnw.github.io/resource_conservation/">
-            <img class="story" src="portfolio/resourcecon.jpg" alt="A screenshot of a website.">
+            <img class="story" src="img/resourcecon.jpg" alt="A screenshot of a website.">
           </a>
           <p>This project was to partially remake the Fourth National Climate Assessment website, with a focus on keeping it small, so it would work well on slow internet.</p>
         </div>
         
         <div>
           <a href="https://felixnw.github.io/typography/">
-            <img class="story" src="portfolio/typography.jpg" alt="A screenshot of a website.">
+            <img class="story" src="img/typography.jpg" alt="A screenshot of a website.">
           </a>
           <p>This was a partial remake of the Electronic Frontier Foundation's Surveillance Self Defense site.</p>
         </div>
