Delete some old stuff, begin new mobile home, ico

--- a/index.html
+++ b/index.html
@@ -13,31 +13,53 @@
     <meta charset="utf-8">
     <title>Felix Doll</title>
     <meta name="author" content="Felix Doll">
-    <meta name="description" content="Felix Doll is a photographer, who is studying Graphic Design and Computer Science, in DC and Seattle.">
+    <meta name="description" content="Hi, I’m Felix. I’m a Computer Science and Graphic Design major in Washington DC.">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/sitewide.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Domine|Montserrat:400,700|Material+Icons&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <div class="container">
-      <div class="background">
-        <nav>
-          <div class="nav1 active">
-            <a href="index.html">Felix Doll</a>
-          </div>
-          <div class="nav2">
-            <a href="https://photography.felixdoll.net">Photography</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="about.html">About</a>
-          </div>
+
+      <div class="header">
+        <nav class="nav">
+          <a href="/index.html">Felix Doll</a>
+          <a class="icon" href=><i class="material-icons">menu</i></a>
         </nav>
-        <div class="title">
-          <h1>Felix Doll</h1>
-          <div class="details">
-            <p>Photographer, majoring in Graphic Design and Computer Science</p>
-        </div>
+        <img class="profile" src="img/profile.jpg" alt="A picture of Felix">
+        <h1>Hi, I’m Felix. I’m a Computer Science and Graphic Design major in Washington DC.</h1>
+        <p class="iconlinks">
+          <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="GitHub Logo"></a>
+          <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="LinkedIn Logo"></a>
+        </p>
       </div>
+
+      <div class="content">
+
+        <div class="nca">
+          <img src="img/resourcecon.jpg" alt="A screenshot of a website.">
+          <h3>4NCA Remake</h3>
+        </div>
+
+        <div class="ssd">
+          <img src="img/typography.jpg" alt="A screenshot of a website.">
+          <h3>Surveillance Self-Defense Remake</h3>
+        </div>
+
+        <div class="avenir">
+          <img src="/portfolio/fontposter.png" alt="A screenshot of a website.">
+          <h3>Font Poster</h3>
+        </div>
+
+        <div class="pasta">
+          <img src="portfolio/label.png" alt="A screenshot of a website.">
+          <h3>Pasta Sauce Label</h3>
+        </div>
+
+      </div>
+
     </div>
-  </div>
+  </body>
 </html>
