Beginning of desktop, photo changes, updates

--- a/index.html
+++ b/index.html
@@ -24,41 +24,91 @@
     <div class="container">
 
       <div class="header">
-        <nav class="nav">
+
+        <nav class="mobnav">
           <a href="/index.html">Felix Doll</a>
           <a class="icon" href=><i class="material-icons">menu</i></a>
         </nav>
+
+        <nav class="nav">
+            <a href="/index.html">Felix Doll</a>
+            <div class="navlinks">
+              <a href="/index.html">Digital</a>
+              <a href="/index.html" class="navlink">Physical</a>
+              <a href="/index.html" class="navlink">About</a>
+            </div>
+        </nav>
+
         <img class="profile" src="img/profile.jpg" alt="A picture of Felix">
-        <h1>Hi, I’m Felix. I’m a Computer Science and Graphic Design major in Washington DC.</h1>
+        <h1 class="headtext">Hi, I’m Felix. I’m a Computer Science and Graphic Design major in Washington DC.</h1>
         <p class="iconlinks">
-          <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="GitHub Logo"></a>
-          <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="LinkedIn Logo"></a>
+          <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="Felix's GitHub Page"></a>
+          <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="Felix's LinkedIn Profile"></a>
         </p>
       </div>
 
-      <div class="content">
+      <div class="tiles">
 
         <div class="nca">
-          <img src="img/resourcecon.jpg" alt="A screenshot of a website.">
-          <h3>4NCA Remake</h3>
+          <div>
+            <img src="img/resourcecon.jpg" alt="A screenshot of a website.">
+            <h2>4NCA Remake</h2>
+          </div>
         </div>
 
         <div class="ssd">
-          <img src="img/typography.jpg" alt="A screenshot of a website.">
-          <h3>Surveillance Self-Defense Remake</h3>
+          <div>
+            <img src="img/typography.jpg" alt="A screenshot of a website.">
+            <h2>Surveillance Self-Defense Remake</h2>
+          </div>
+        </div>
+
+        <div class="bonewars">
+          <div>
+            <img src="img/story.jpg" alt="A screenshot of a website.">
+            <h2>Wikipedia Article Website</h2>
+          </div>
+        </div>
+
+        <div class="privdc">
+          <div>
+            <img src="img/conference.jpg" alt="A screenshot of a website.">
+            <h2>Conference Website</h2>
+          </div>
         </div>
 
         <div class="avenir">
-          <img src="/portfolio/fontposter.png" alt="A screenshot of a website.">
-          <h3>Font Poster</h3>
+          <div>
+            <img class="tilepic" src="/img/fontposter.jpg" alt="A screenshot of a website.">
+            <h2>Font Poster</h2>
+          </div>
         </div>
 
         <div class="pasta">
-          <img src="portfolio/label.png" alt="A screenshot of a website.">
-          <h3>Pasta Sauce Label</h3>
+          <div>
+            <img src="img/label.jpg" alt="A screenshot of a website.">
+            <h2>Pasta Sauce Label</h2>
+          </div>
         </div>
 
+        <div class="monogram">
+          <div>
+            <img src="img/monogram.png" alt="A screenshot of a website.">
+            <h2>Monogram</h2>
+          </div>
+        </div>
+
+        
+
       </div>
+
+      <div class="footer">
+          <p>© 2019 Felix Doll</p>
+          <p class="iconlinks">
+            <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="Felix's GitHub Page"></a>
+            <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="Felix's LinkedIn Profile"></a>
+          </p>
+        </div>
 
     </div>
   </body>
