start of about page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </nav>
 
         <nav class="nav">
-            <a href="/index.html">Felix Doll</a>
+            <a href="index.html">Felix Doll</a>
             <div class="navlinks">
-              <a href="/index.html">Digital</a>
-              <a href="/index.html" class="navlink">Physical</a>
-              <a href="/index.html" class="navlink">About</a>
+              <a href="#digital">Digital</a>
+              <a href="#physical" class="navlink">Physical</a>
+              <a href="about.html" class="navlink">About</a>
             </div>
         </nav>
 
@@ -49,62 +49,60 @@
 
       <div class="tiles">
 
-        <div class="nca">
+        <div id="digital" class="nca">
           <div>
-            <img src="img/resourcecon.jpg" alt="A screenshot of a website.">
+            <img src="img/resourcecon.jpg" alt="Screenshot of 4NCA Remake">
             <h2>4NCA Remake</h2>
           </div>
         </div>
 
         <div class="ssd">
           <div>
-            <img src="img/typography.jpg" alt="A screenshot of a website.">
+            <img src="img/typography.jpg" alt="Screenshot of SSD Remake">
             <h2>Surveillance Self-Defense Remake</h2>
           </div>
         </div>
 
         <div class="bonewars">
           <div>
-            <img src="img/story.jpg" alt="A screenshot of a website.">
+            <img src="img/story.jpg" alt="Screenshot of Bone Wars">
             <h2>Wikipedia Article Website</h2>
           </div>
         </div>
 
         <div class="privdc">
           <div>
-            <img src="img/conference.jpg" alt="A screenshot of a website.">
+            <img src="img/conference.jpg" alt="Screenshot of Priv DC">
             <h2>Conference Website</h2>
           </div>
         </div>
 
-        <div class="avenir">
+        <div id="physical" class="avenir">
           <div>
-            <img class="tilepic" src="/img/fontposter.jpg" alt="A screenshot of a website.">
+            <img class="tilepic" src="/img/fontposter.jpg" alt="A poster displaying examples of the font Avenir, along with history">
             <h2>Font Poster</h2>
           </div>
         </div>
 
         <div class="pasta">
           <div>
-            <img src="img/label.jpg" alt="A screenshot of a website.">
+            <img src="img/label.jpg" alt="A green pasta sauce label entitled Piccirilli's Pesto Sauce">
             <h2>Pasta Sauce Label</h2>
           </div>
         </div>
 
         <div class="monogram">
           <div>
-            <img src="img/monogram.png" alt="A screenshot of a website.">
+            <img class="tilepic" src="img/monogram.png" alt="Monogram of the stylized letters FD, white on black">
             <h2>Monogram</h2>
           </div>
         </div>
-
-        
 
       </div>
 
       <div class="footer">
           <p>© 2019 Felix Doll</p>
-          <p class="iconlinks">
+          <p>
             <a class="github" href="https://github.com/felixnw/"><img src="img/github.png" alt="Felix's GitHub Page"></a>
             <a href="https://www.linkedin.com/in/felixdoll"><img src="img/linkedin.png" alt="Felix's LinkedIn Profile"></a>
           </p>
