--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
               <a href="/index.html">Felix Doll</a>
               <button class="close" href=><i class="material-icons">close</i></button>
             </nav>
-            <div>
+            <div class="nslbox">
               <a class= navscreenlinks href="index.html#digital" onclick="navToggle();">Digital</a> <br>
               <a class= navscreenlinks href="index.html#physical" onclick="navToggle();">Physical</a> <br>
               <a class= navscreenlinks href="about.html">About</a>
