--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="/index.html">Felix Doll</a>
           <button class="close" href=><i class="material-icons">close</i></button>
         </nav>
-        <div>
+        <div class=nslbox>
           <a class= navscreenlinks href="index.html#digital" onclick="navToggle();">Digital</a> <br>
           <a class= navscreenlinks href="index.html#physical" onclick="navToggle();">Physical</a> <br>
           <a class= navscreenlinks href="about.html">About</a>
@@ -89,6 +89,13 @@
             <h2>Conference Website</h2>
           </div>
         </div>
+
+        <div class="portfolio">
+            <div>
+              <img src="img/conference.jpg" alt="Screenshot of portfolio">
+              <h2>Reserved space for this website</h2>
+            </div>
+          </div>
 
         <div id="physical" class="avenir">
           <div>
