--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
         <div id="navscreen" class="navscreen">
             <nav class="mobnav">
-              <a href="/index.html">Felix Doll</a>
+              <a href="index.html">Felix Doll</a>
               <button class="close" href=><i class="material-icons">close</i></button>
             </nav>
             <div class="nslbox">
@@ -41,7 +41,7 @@
           <div class="header">
     
             <nav class="mobnav">
-              <a href="/index.html">Felix Doll</a>
+              <a href="index.html">Felix Doll</a>
               <button class="icon"><i class="material-icons">menu</i></button>
             </nav>
 
