--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <div id="navscreen" class="navscreen">
         <nav class="mobnav">
-          <a href="/index.html">Felix Doll</a>
+          <a href="index.html">Felix Doll</a>
           <button class="close" href=><i class="material-icons">close</i></button>
         </nav>
         <div class=nslbox>
@@ -39,7 +39,7 @@
       <div class="header">
 
         <nav class="mobnav">
-          <a href="/index.html">Felix Doll</a>
+          <a href="index.html">Felix Doll</a>
           <button class="icon"><i class="material-icons">menu</i></button>
         </nav>
 
@@ -99,7 +99,7 @@
 
         <div id="physical" class="avenir">
           <div>
-            <img class="tilepic" src="/img/fontposter.jpg" alt="A poster displaying examples of the font Avenir, along with history">
+            <img class="tilepic" src="img/fontposter.jpg" alt="A poster displaying examples of the font Avenir, along with history">
             <h2>Font Poster</h2>
           </div>
         </div>
