--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
 
       </div>
       <div class="about">
-      <h2>About Me</h2>
-        <p>I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests. You can contact me at contact(at)felixdoll.net.</p>
+        <h2 class="abouttitle">About Me</h2>
+        <p class="abouttext">I'm Felix Doll. I am a college student at American University, and spend my summers in Seattle. I've long been interested in photography, technology, and design. I've spent a number of years honing my eye for detail in my photography, as well as my design, and computer skills. I'm currently studying Graphic Design and Computer Science at American University in Washington DC, as a way to combine my skills and interests. You can contact me at contact(at)felixdoll.net.</p>
       </div>
 
       <div class="footer">
