Begin to add pages and links

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             </div>
         </nav>
 
-        <h1>Some text here...</h1>
+        <h1>Programming. Design. Photography.</h1>
         <img class="hero" src="img/hero.jpg" alt="Felix climbing outdoors">
 
       </div>
