--- a/index.html
+++ b/index.html
@@ -63,59 +63,59 @@
       <div class="tiles">
 
         <div id="digital" class="nca">
-          <div>
+          <a class="tilelink" href=4nca.html>
             <img src="img/resourcecon.jpg" alt="Screenshot of 4NCA Remake">
             <h2>4NCA Remake</h2>
-          </div>
+          </a>
         </div>
 
         <div class="ssd">
-          <div>
+          <a class="tilelink" href=ssd.html>
             <img src="img/typography.jpg" alt="Screenshot of SSD Remake">
             <h2>Surveillance Self-Defense Remake</h2>
-          </div>
+          </a>
         </div>
 
         <div class="bonewars">
-          <div>
+          <a class="tilelink" href=bonewars.html>
             <img src="img/story.jpg" alt="Screenshot of Bone Wars">
             <h2>Wikipedia Article Website</h2>
-          </div>
+          </a>
         </div>
 
         <div class="privdc">
-          <div>
+          <a class="tilelink" href=privdc.html>
             <img src="img/conference.jpg" alt="Screenshot of Priv DC">
             <h2>Conference Website</h2>
-          </div>
+          </a>
         </div>
 
         <div class="portfolio">
-            <div>
+          <a class="tilelink" href=portfolio.html>
               <img src="img/conference.jpg" alt="Screenshot of portfolio">
               <h2>Reserved space for this website</h2>
-            </div>
-          </div>
+          </a>
+        </div>
 
         <div id="physical" class="avenir">
-          <div>
+          <a class="tilelink" href=avenir.html>
             <img class="tilepic" src="img/fontposter.jpg" alt="A poster displaying examples of the font Avenir, along with history">
             <h2>Font Poster</h2>
-          </div>
+          </a>
         </div>
 
         <div class="pasta">
-          <div>
+          <a class="tilelink" href=pasta.html>
             <img src="img/label.jpg" alt="A green pasta sauce label entitled Piccirilli's Pesto Sauce">
             <h2>Pasta Sauce Label</h2>
-          </div>
+          </a>
         </div>
 
         <div class="monogram">
-          <div>
+          <a class="tilelink" href=monogram.html>
             <img class="tilepic" src="img/monogram.png" alt="Monogram of the stylized letters FD, white on black">
             <h2>Monogram</h2>
-          </div>
+          </a>
         </div>
 
       </div>
